--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pestras/microservice",
-  "version": "0.0.23",
+  "version": "0.1.0",
   "description": "Nodejs typescript microservice",
   "main": "index.js",
   "types": "index.ts",
@@ -32,10 +32,10 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@pestras/toolbox": "^1.0.1",
     "@types/node": "^10.17.14",
     "@types/socket.io": "^2.1.4",
     "socket.io": "^2.3.0",
-    "tools-box": "^0.1.36",
     "ts-nats": "^1.2.12"
   }
 }
